terraform/modules/kubernetes/apps/commafeed.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: commafeed
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commafeed
  namespace: commafeed
  labels:
    app: commafeed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commafeed
  template:
    metadata:
      labels:
        app: commafeed
    spec:
      containers:
        - name: commafeed
          image: athou/commafeed:latest-h2
          ports:
            - containerPort: 8082
          volumeMounts:
            - name: data
              mountPath: /commafeed/data
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: commafeed-data
---
apiVersion: v1
kind: Service
metadata:
  name: commafeed-service
  namespace: commafeed
spec:
  selector:
    app: commafeed
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: commafeed-ingress
  namespace: commafeed
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: commafeed-service
      port:
        number: 8082
  tls:
    - hosts:
        - rss
